Don't require separate username and email

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,16 @@
 CHANGES
 =======
 
+v0.2.2CNG, 2016-04-21
+---------------------
+* Don't require separate username and email
+* Commits on Feb 16, 2016
+* Commits on Jun 10, 2012 
+* Commits on May 15, 2012
+* Commits on May 14, 2012
+* Commits on Oct 28, 2011
+* Commits on Apr 20, 2011
+
 v0.2.2dev, 2010-12-17
 ---------------------
 * Improvements to migration
